# oci_rs

./: .gitignore  CHANGELOG.md  CRATEREADME.md  Cargo.toml  LICENCE  README.md  build.rs
docs/: index.html  search-index.js
docs/byteorder/: enum.BigEndian.html  enum.LittleEndian.html  index.html  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.BE.html  type.LE.html  type.NativeEndian.html  type.NetworkEndian.html
docs/implementors/core/borrow/: trait.Borrow.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/convert/: trait.AsRef.js  trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/oci_rs/: index.html  sidebar-items.js
docs/oci_rs/connection/: index.html  sidebar-items.js  struct.Connection.html
docs/oci_rs/oci_error/: ErrorRecord.t.html  OciError.t.html  enum.OciError.html  index.html  sidebar-items.js  struct.ErrorRecord.html
docs/oci_rs/row/: index.html  sidebar-items.js  struct.Row.html
docs/oci_rs/statement/: index.html  sidebar-items.js  struct.RowIter.html  struct.Statement.html
docs/oci_rs/types/: FromSqlValue.t.html  SqlValue.t.html  ToSqlValue.t.html  enum.SqlValue.html  index.html  sidebar-items.js  trait.FromSqlValue.html  trait.ToSqlValue.html
docs/src/byteorder/: io.rs.html  lib.rs.html
docs/src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
docs/src/oci_rs/: connection.rs.html  lib.rs.html  oci_bindings.rs.html  oci_error.rs.html  row.rs.html  statement.rs.html  types.rs.html
src/: CRATEREADME.md  common.rs  connection.rs  lib.rs  oci_bindings.rs  oci_error.rs  row.rs  statement.rs  types.rs
(+20 files in other folders)
