[package]
name = "oci_rs"
version = "0.8.0"
authors = ["Huw Wynn-Jones <huw@huwwynnjones.com>"]
description = "This crate provides a Rust wrapper to the Oracle Call Interface (OCI) library."
keywords = ["oracle", "database", "sql", "oci", "db"]
categories = ["database", "api-bindings"]
license = "MIT"
homepage = "https://github.com/huwwynnjones/oci_rs"
repository = "https://github.com/huwwynnjones/oci_rs"
documentation = "https://docs.rs/crate/oci_rs/"
readme = "CRATEREADME.md"
edition = "2018"

[dependencies]
libc = "0.2.23"
byteorder = "1.0.0"
chrono = "0.4.0"
log = "0.4.6"

[build-dependencies]
build-helper = "0.1.1"
